<resources>
    <string name="app_name">Convidados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_guests">Todos</string>
    <string name="menu_presents">Presentes</string>
    <string name="menu_absents">Ausentes</string>
    <string name="text_view_name">Nome</string>
    <string name="text_view_presence">Presença</string>
    <string name="text_button_present">Presente</string>
    <string name="text_button_absent">Ausente</string>
    <string name="text_button_save">Salvar</string>
</resources>